# moveit2

./: Cargo.toml  README.crates-io.md  README.md
.github/workflows/: checks.yml  ci.yml  release.sh  rust.yml
cxx-tests/: Cargo.toml  build.rs
cxx-tests/src/: new_helpers.h  tests.rs
moveit2-proc-macros/: Cargo.toml
moveit2-proc-macros/src/: attr_helpers.rs  cfg_helpers.rs  lib.rs  vis_helpers.rs
src/: alloc_support.rs  ctor.rs  cxx_support.rs  drop_flag.rs  lib.rs  move_ref.rs  slot.rs
src/new/: copy_new.rs  default_new.rs  factories.rs  impls.rs  mod.rs  move_new.rs
tests/: ctor.rs
tests/cxx/: Cargo.toml
tests/cxx/src/: cxx_support_test_cpp.h  lib.rs  tests.rs
