# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "3"
members = ["moveit2-proc-macros", "tests/cxx"]

[workspace.package]
repository = "https://github.com/tremwil/moveit2"
edition = "2024"
license = "Apache-2.0 OR MIT"

[package]
name = "moveit2"
authors = ["Miguel Young de la Sota <mcyoung@google.com>"]
keywords = ["ffi", "no_std", "macros", "lifetime", "ownership"]
readme = "README.crates-io.md"
description = "A library for safe, in-place construction of Rust (and C++!) objects."
exclude = [".github/*", ".cargo/*"]
version = "0.7.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[test]]
name = "ctor"
required-features = ["alloc", "ctor"]

[features]
alloc = []
ctor = ["dep:moveit2-proc-macros"]
default = ["alloc", "ctor"]

[dependencies.cxx]
version = "1.0.194"
optional = true

[dependencies.moveit2-proc-macros]
version = "=0.1.0"
optional = true
path = "moveit2-proc-macros"

[dev-dependencies]
pin-project = "1.1.11"

[lints.rust.unexpected_cfgs]
level = "warn"
# This cfg allows testing trap flag aborts in integration tests.
# It should NEVER be used in other scenarios, as it is UNSOUND!
check-cfg = ['cfg(moveit2_no_drop_flag_abort)']

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]