[package]
name = "moveit2-proc-macros"
description = "proc macros re-exported by the moveit2 crate"
authors = ["William Tremblay <tremwil@gmail.com>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.117"
proc-macro2 = "1.0.106"
quote = "1.0.45"